src/objects/Product_Facts__kav.object
<CustomObject>
    <articleTypeChannelDisplay>
        <articleTypeTemplates>
            <channel>App</channel>
            <template>Toc</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Prm</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Csp</channel>
            <template>Tab</template>
        </articleTypeTemplates>
        <articleTypeTemplates>
            <channel>Pkb</channel>
            <template>Toc</template>
        </articleTypeTemplates>
    </articleTypeChannelDisplay>
    <fields>
        <fullName>AAI_Guidelines__c</fullName>
        <label>AA Guidelines</label>
        <length>20000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>AMR_Guidelines__c</fullName>
        <label>AMR Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Never reviewed by Communications</fullName>
                </value>
                <value>
                    <fullName>Being reviewed by Communications</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Updated by Communications</fullName>
                </value>
                <value>
                    <fullName>Approved &amp; Updated by GCR (no Communications)</fullName>
                </value>
                <value>
                    <fullName>Rejected by Communications</fullName>
                </value>
                <value>
                    <fullName>For internal use - Do Not Delete</fullName>
                </value>
                <value>
                    <fullName>Hidden field only visible to GCM &amp; Admin Only</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Article_Notes__c</fullName>
        <label>Article Notes</label>
        <length>50000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Attachment__c</fullName>
        <label>Attachment</label>
        <type>File</type>
    </fields>
    <fields>
        <fullName>BR_Guidelines__c</fullName>
        <label>BR Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Brand_Benefits__c</fullName>
        <label>Brand Benefits</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Europe_Guidelines__c</fullName>
        <label>Europe Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>GC_Guidelines__c</fullName>
        <label>GC Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Helpful_Articles__c</fullName>
        <label>Helpful Articles</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Helpful_Links__c</fullName>
        <label>Helpful Links</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>How_to_Use__c</fullName>
        <label>How to Use</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>IMEA_Guidelines__c</fullName>
        <label>IMEA Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JP_Guidelines__c</fullName>
        <label>JP Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>KO_Guidelines__c</fullName>
        <label>KO Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>LA_Guidelines__c</fullName>
        <label>LA Guidelines</label>
        <length>40000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Legacy_ArticleNumber__c</fullName>
        <label>Legacy ArticleNumber</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_ID__c</fullName>
        <label>Legacy ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Legacy_Status__c</fullName>
        <label>Legacy Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Packaging_Recyclability__c</fullName>
        <label>Packaging Recyclability</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Price_Range__c</fullName>
        <label>Price Range</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product_Information__c</fullName>
        <label>Product Information</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Production_code__c</fullName>
        <label>Production code/ Expiration Date</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Related_Products__c</fullName>
        <label>Related Products</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Date__c</fullName>
        <label>Review Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Shelf_Life_Storage__c</fullName>
        <label>Shelf Life/Storage</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Where_to_Find__c</fullName>
        <label>Where to Find</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <label>Product Facts</label>
    <pluralLabel>Product Facts</pluralLabel>
</CustomObject>